--- a/trunk/Molecule.MvcWebSite/Views/Shared/Page.Master
+++ b/trunk/Molecule.MvcWebSite/Views/Shared/Page.Master
@@ -16,45 +16,28 @@
     <% var data = (Molecule.MvcWebSite.Models.PageData)ViewData["PageData"]; %>
     <div id="pagePanel">
         <div id="header">
-            <h1>
-                &nbsp;
-                <div id="logo">
-                    <img alt="logo" src="/App_Themes/bloup/images/molecule-24.png" />
-                </div>
-                <span>
-                    <%= AdminService.MoleculeTitle %></span> -
-                <%--<span>
-                        <%=Page.Title%></span>--%>
-            </h1>
+            <h1>&nbsp;<div id="logo"><img alt="logo" src="/App_Themes/bloup/images/molecule-24.png" /></div>
+                <span><%= AdminService.MoleculeTitle %></span><%--<span><%=Page.Title%></span>--%></h1>
         </div>
         <div id="sideBar">
             <div id="menuPanel">
                 <div class="menuContent" id="menuContent">
                 
                     <%
-                        if (Request.IsAuthenticated)
+                        if (Request.IsAuthenticated) {
+                       %><%= Resources.molecule.Welcome + " " + Html.Encode(Page.User.Identity.Name) %> !<br />
+                    [<%= Html.ActionLink(Resources.molecule.LogOff, "LogOff", new { atome = "admin", controller = "Authentification" })%>]
+                    <%
+                        }
+                        else
                         {
-                    %>
-                    <%= Resources.molecule.Welcome + " " + Html.Encode(Page.User.Identity.Name) %> !<br /> [
-                    <%= Html.ActionLink(Resources.molecule.LogOff, "LogOff", new { atome = "admin", controller = "Authentification" })%>
-                    ]
-                    <%
-                        }
-    else
-    {
-                    %>
-                    [
-                    <%= Html.ActionLink(Resources.molecule.Login, "LogOn",
-                        new { atome = "admin", controller = "Authentification", returnUrl = Page.Request.Url })%>
-                    ]
+                    %>[<%= Html.ActionLink(Resources.molecule.Login, "LogOn",
+                        new { atome = "admin", controller = "Authentification", returnUrl = Page.Request.Url })%>]
                     <%
                         }
                     %>
-                    <ul>
-                    <% foreach (var atome in data.Atomes){%>
-                        <li><a href="/<%= atome.Id %>/"><%= atome.Name %></a></li>
-
-                    <% } %>
+                    <ul><% foreach (var atome in data.Atomes){%>
+                        <li><a href="/<%= atome.Id %>/"><%= atome.Name %></a></li><% } %>
                     </ul>
                     <%--<asp:LoginStatus runat="server" />--%>
                 </div>
