--- a/trunk/Molecule.MvcWebSite/Views/Shared/Page.Master
+++ b/trunk/Molecule.MvcWebSite/Views/Shared/Page.Master
@@ -21,7 +21,7 @@
         </div>
         <div id="sideBar">
             <div id="menuPanel">
-                <div class="menuContent" id="menuContent">
+                <div id="menuContent">
                 
                     <%
                         if (Request.IsAuthenticated) {
