--- a/trunk/Molecule.MvcWebSite/Views/Shared/Page.Master
+++ b/trunk/Molecule.MvcWebSite/Views/Shared/Page.Master
@@ -33,7 +33,10 @@
             <div id="menuPanel">
                 <div id="menuContent">
                     <ul><% foreach (var atome in data.Atomes){%>
-                        <li><a href="/<%= atome.Id %>/"><%= atome.Name %></a></li><% } %>
+                        <li><%if (AtomeService.CurrentPathIsAtome && atome == AtomeService.CurrentAtome)
+                              {%><%= atome.Name %>
+                        <%}else{ %>
+                        <a href="/<%=atome.Id%>"><%= atome.Name %></a><%} %></li><% } %>
                     </ul>
                     <%--<asp:LoginStatus runat="server" />--%>
                 </div>
