* Molecule.sln: * Molecule/Atome/AtomeProviderBase.cs: * WebMusic/WebMusic.Providers/Base/Album.cs: * WebMusic/WebMusic.Providers/Base/Artist.cs: * Molecule.MvcWebSite/Themes/bloup/molecule.css: * Molecule.MvcWebSite/Molecule.MvcWebSite.csproj: * Molecule.MvcWebSite/atomes/music/style/layout.css: * Molecule.MvcWebSite/atomes/music/scripts/default.js: * WebMusic/WebMusic.Providers.Banshee/BansheeProvider.cs: * Molecule.MvcWebSite/atomes/music/Views/Player/Index.aspx: * Molecule.MvcWebSite/WebdavInternal/WebdavUploadFileResult.cs: * Molecule.MvcWebSite/atomes/music/Controllers/PlayerController.cs: * WebMusic/WebMusic.Providers.Banshee/WebMusic.Providers.Banshee.csproj: * WebMusic/WebMusic.Providers.Rhythmbox/WebMusic.Providers.Rhythmbox.csproj:

--- a/trunk/Molecule.MvcWebSite/Themes/bloup/molecule.css
+++ b/trunk/Molecule.MvcWebSite/Themes/bloup/molecule.css
@@ -1,4 +1,4 @@
-﻿
+
 
 body
 {
@@ -419,4 +419,9 @@ input[type="text"]
 {
 	background-color: #2e3436;
 	color:white;
+}
+
+#songInfo
+{
+ width:auto;
 }
