--- a/trunk/Molecule.MvcWebSite/Views/Shared/Page.Master
+++ b/trunk/Molecule.MvcWebSite/Views/Shared/Page.Master
@@ -34,9 +34,9 @@
                 <div id="menuContent">
                     <ul><% foreach (var atome in data.Atomes){%>
                         <li><%if (AtomeService.CurrentPathIsAtome && atome == AtomeService.CurrentAtome)
-                              {%><%= atome.Name %>
-                        <%}else{ %>
-                        <a href="<%= Url.Action("Index", atome.DefaultControllerName, new { atome = atome.Id}) %>"><%= atome.Name %></a><%} %></li><% } %>
+                              {%> ▸ <%} %>
+                        <a href="<%= Url.Action("Index", atome.DefaultControllerName, new { atome = atome.Id}) %>"><%= atome.Name %></a>
+                        </li><% } %>
                     </ul>
                     <%--<asp:LoginStatus runat="server" />--%>
                 </div>
